# HelloQtApp

./: CMakeLists.txt
src/: mainwindow.h  mainwindow.ui
